# claude_alert

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: codex-debugger.md  general-purpose.md
.claude/docs/: CODEX_HANDOFF_PLAYBOOK.md
.claude/hooks/: agent-router.py  check-codex-before-write.py  error-to-codex.py  log-cli-tools.py
.claude/logs/: cli-tools.jsonl
.claude/rules/: codex-delegation.md  dev-environment.md
.claude/skills/add-feature/: SKILL.md
.claude/skills/catchup/: SKILL.md
.claude/skills/checkpointing/: SKILL.md  checkpoint.py
.claude/skills/codex-system/: SKILL.md
.claude/skills/codex-system/references/: code-review-task.md  delegation-patterns.md  refactoring-task.md
.claude/skills/context-refresh/: SKILL.md
.claude/skills/init/: SKILL.md
.claude/skills/research-lib/: SKILL.md
.claude/skills/spike/: SKILL.md
.claude/skills/start-feature/: SKILL.md
.claude/skills/team-implement/: SKILL.md
.claude/skills/team-review/: SKILL.md
.claude/skills/troubleshoot/: SKILL.md
.codex/: AGENTS.md
scripts/: install_hooks.py  notify.sh  stop.sh
src/claude_alert/: __init__.py  config.py  formatter.py  ntfy.py
src/claude_alert/hooks/: notification.py  stop.py
tests/: conftest.py  test_config.py  test_formatter.py  test_hook_notification.py  test_hook_stop.py  test_ntfy.py
